--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "cloudinary": "^1.36.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "firebase": "^9.20.0",
     "firebase-admin": "^11.7.0",
     "mongoose": "^7.0.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-oauth2": "^1.7.0",
     "swagger-ui-express": "^4.6.2"
   }
 }
